# d-color-extractor

./: .gitignore  CMakeLists.txt  README.md  common.h  d_color_extractor.h  gitignore  image_analyzer.c  image_analyzer.h  jpeg.c  jpeg.h  main.c  test.c
Test Images/: HSV-sat.xcf  HSV-val.xcf
config/: doxyconf
models/: histogram.c  histogram.h  pixel.c  pixel.h
source/: color.c  color.h  common.h  d_color_extractor.h  helpers.c  image_analyzer.c  image_analyzer.h  main.c  source.code-workspace
source/image_readers/: jpeg.c  jpeg.h
source/models/: histogram.c  histogram.h
